# Autonomous-Mobile-Bot

./: LICENSE  README.md  README_RPI.md
additional_nodes/: package.xml  setup.cfg  setup.py
arduino_bridge_new/: package.xml  setup.cfg  setup.py
arduino_bridge_new/arduino_bridge_new/: arduino_bridge.py  wheel_velocity_publisher.py
arduino_bridge_new/launch/: arduino_bridge_persistent.launch.py  complete_bridge_persistent.launch.py
bot_bringup/: CMakeLists.txt  package.xml
bot_bringup/launch/: hardware_configure.launch.xml  localization.launch.xml
bot_controller/: CMakeLists.txt  package.xml
bot_controller/bot_controller/: noisy_controller.py  simple_controller.py
bot_controller/config/: bot_controller.yaml
bot_controller/launch/: bot_controller.launch.xml
bot_description/: package.xml
bot_description/config/: gazebo_bridge.yaml
bot_description/launch/: gazebo.launch.xml
bot_description/urdf/: bot.urdf.xacro  bot_ros2_control.xacro
bot_localization/: package.xml  setup.cfg  setup.py
bot_localization/bot_localization/: imu_republisher.py  kalman_filter.py
imu_mpu6050/: package.xml  setup.cfg  setup.py
imu_mpu6050/imu_mpu6050/: imu_publisher.py
scripts/: arduino_motor_controller.ino  create_device_rules.py  diagnose_arduino.py  setup_rpi.sh
turtlebot_navigation/: package.xml  setup.py
turtlebot_navigation/config/: nav2_params.yaml  slam_toolbox_params.yaml
turtlebot_navigation/launch/: navigation.launch.py  slam.launch.py
urg_node2/config/: params_serial_persistent.yaml
urg_node2/launch/: urg_node2_2lidar.launch.py  (+2 more)
