<?xml version="1.0"?>
<package format="3">
  <name>turtlebot_navigation</name>
  <version>0.0.0</version>
  <description>TurtleBot SLAM and Navigation Package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>navigation2</depend>
  <depend>robot_localization</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
